<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:padding="@dimen/global_padding"
    tools:context=".presentation.product.ProductFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/imageContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_item_food_r10"
            android:padding="@dimen/padding_14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/dishImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:contentDescription="@string/product_photo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/food_sample" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/closeButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@color/white_100"
                app:cardCornerRadius="@dimen/corner_8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_close_24x24"
                    android:contentDescription="@string/close_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/favoriteButton"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="@dimen/padding_8dp"
                android:background="@color/white_100"
                app:cardCornerRadius="@dimen/corner_8dp"
                app:layout_constraintEnd_toStartOf="@id/closeButton"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_favorite_24x24"
                    android:contentDescription="@string/favorite_button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/productTitle"
            style="@style/ProductTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageContainer"
            tools:text="Рыба с овощами и рисом" />

        <TextView
            android:id="@+id/productPrice"
            style="@style/ProductPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productTitle"
            tools:ignore="TextSizeCheck"
            tools:text="799 ₽" />

        <TextView
            android:id="@+id/productWeight"
            style="@style/ProductWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:layout_constraintStart_toEndOf="@id/productPrice"
            app:layout_constraintTop_toBottomOf="@id/productTitle"
            tools:ignore="TextSizeCheck"
            tools:text=" · 560г" />

        <TextView
            android:id="@+id/productDescription"
            style="@style/ProductDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productPrice"
            tools:ignore="TextSizeCheck"
            tools:text="Рыба маринованная со специями, лимонным соком, соевым соусом и запечeнная в духовке с лучком, томатами и картошечкой под золотистой майонезно-сырной шубкой" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addToBasket"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_16dp"
            android:text="@string/add_to_basket"
            app:layout_constraintTop_toBottomOf="@id/productDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>