<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/padding_16dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/imageContainer"
        android:layout_width="@dimen/image_62dp"
        android:layout_height="@dimen/image_62dp"
        android:background="@drawable/shape_item_food_r6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" >
        <ImageView
            android:id="@+id/productImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerInside"
            tools:src="@drawable/food_sample"
            android:contentDescription="@string/product_photo"
            android:layout_margin="@dimen/padding_2dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/counterPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_basket_counter_plus"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_6dp"
            android:layout_marginVertical="@dimen/padding_4dp"
            android:contentDescription="@string/add_button"
            android:src="@drawable/ic_plus_24x24" />
    </RelativeLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/counterContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/basket_counter"
        app:layout_constraintEnd_toStartOf="@id/counterPlus"
        app:layout_constraintTop_toTopOf="@id/counterPlus"
        app:layout_constraintBottom_toBottomOf="@id/counterPlus">

        <TextView
            android:id="@+id/counter"
            style="@style/BasketCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_10dp"
            android:background="@color/basket_counter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextSizeCheck"
            tools:text="10" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/counterMinus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_basket_counter_minus"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/counterContainer"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_6dp"
            android:layout_marginVertical="@dimen/padding_4dp"
            android:contentDescription="@string/substract_button"
            android:src="@drawable/ic_minus_24x24" />
    </RelativeLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/padding_8dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toEndOf="@id/imageContainer"
    app:layout_constraintEnd_toStartOf="@id/counterMinus"
    app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/productTitle"
        style="@style/SF_Pro_Display_medium_14dp_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck"
        tools:text="Зеленый салат" />

    <TextView
        android:id="@+id/productPrice"
        style="@style/ProductPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/productTitle"
        tools:ignore="TextSizeCheck"
        tools:text="799 ₽" />

    <TextView
        android:id="@+id/productWeight"
        style="@style/ProductWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_4dp"
        app:layout_constraintStart_toEndOf="@id/productPrice"
        app:layout_constraintTop_toBottomOf="@id/productTitle"
        tools:ignore="TextSizeCheck"
        tools:text=" · 560г" />
</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>